.nvim/xcodebuild/simulator_logs.log
游눌 InjectionIII connected /Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News.xcodeproj
游눌 Watching files under the directory /Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News
游눌 游눌 丘멆잺 Your project file seems to be in the Desktop or Documents folder and may prevent InjectionIII working as it has special permissions.
游눌 Compiling /Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift
游눌 Compiling /Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift
游눌 丘멆잺 Re-compilation failed (see: /Users/beng/Library/Developer/CoreSimulator/Devices/9008A034-3255-4387-BAC6-2DF310780AF9/data/Containers/Data/Application/8BAE795A-A6B4-4692-AAF0-943F437F46C8/tmp/command.sh)
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:70:1: error: expected '}' in struct

^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:11:29: note: to match this opening '{'
struct OnboardingView: View {
                            ^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:67:1: error: circular reference expanding freestanding macro 'Preview'
#Preview {
^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:11:8: note: through reference here
struct OnboardingView: View {
       ^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:11:8: note: through reference here
struct OnboardingView: View {
       ^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:11:8: note: through reference here
struct OnboardingView: View {
       ^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:11:8: note: through reference here
struct OnboardingView: View {
       ^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:67:1: note: while resolving freestanding macro 'Preview'
#Preview {
^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:67:1: error: circular reference expanding freestanding macro 'Preview'
#Preview {
^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:11:8: note: through reference here
struct OnboardingView: View {
       ^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:11:8: note: through reference here
struct OnboardingView: View {
       ^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:67:1: note: while resolving freestanding macro 'Preview'
#Preview {
^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:67:1: error: circular reference expanding freestanding macro 'Preview'
#Preview {
^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:11:8: note: through reference here
struct OnboardingView: View {
       ^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:11:8: note: through reference here
struct OnboardingView: View {
       ^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:11:8: note: through reference here
struct OnboardingView: View {
       ^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:67:1: note: while resolving freestanding macro 'Preview'
#Preview {
^
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:42:12: warning: result of call to 'padding' is unused
          .padding(.horizontal, 5.0)
           ^      ~~~~~~~~~~~~~~~~~~
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:49:12: warning: result of call to 'padding' is unused
          .padding(.horizontal, 5.0)
           ^      ~~~~~~~~~~~~~~~~~~
/Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift:59:10: warning: result of call to 'position(x:y:)' is unused
        .position(x: geo.size.width * 0.5, y: geo.size.height * 0.95)
         ^       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

游눌 丘멆잺 Recompilation failing, are you renaming/adding files? Build your project to generate a new Xcode build log and try injecting again or relauch your app.
游눌 Compiling /Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift
游눌 Selecting Xcode /Applications/Xcode-15.2.0.app/Contents/Developer
游눌 Loading .dylib ...
游눌 Interposed 7 function references.
游눌 Injected type #1 'Space_News.OnboardingView'
游눌 Compiling /Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift
游눌 Loading .dylib ...
游눌 Interposed 7 function references.
游눌 Injected type #1 'Space_News.OnboardingView'
游눌 Compiling /Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift
游눌 Loading .dylib ...
游눌 Interposed 7 function references.
游눌 Injected type #1 'Space_News.OnboardingView'
游눌 Compiling /Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift
游눌 Loading .dylib ...
游눌 Interposed 7 function references.
游눌 Injected type #1 'Space_News.OnboardingView'
游눌 Compiling /Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift
游눌 Loading .dylib ...
游눌 Interposed 7 function references.
游눌 Injected type #1 'Space_News.OnboardingView'
游눌 Compiling /Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift
游눌 Loading .dylib ...
游눌 Interposed 7 function references.
游눌 Injected type #1 'Space_News.OnboardingView'
游눌 Compiling /Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift
游눌 Loading .dylib ...
游눌 Interposed 7 function references.
游눌 Injected type #1 'Space_News.OnboardingView'
游눌 Compiling /Users/beng/Documents/iOS App Developer/Space_News_SwiftUI/Space News/Space News/Features/Onboarding/Views/OnboardingView.swift
游눌 Loading .dylib ...
游눌 Interposed 7 function references.
游눌 Injected type #1 'Space_News.OnboardingView'
